# parsekit

./: .gitignore  ALIGNMENT_PLAN.md  CHANGELOG.md  CONTRIBUTING.md  DEPENDENCIES.md  Gemfile  README.md  REFACTOR_PLAN.md  Rakefile  parsekit.gemspec  parser-core-ruby.gemspec
.github/: dependabot.yml
.github/workflows/: ci.yml  release.yml
docs/: DEPENDENCIES.md  FEATURE_COMPARISON.md  PPTX_PLAN.md  REFACTOR_PLAN.md
examples/: advanced_parsing.rb  basic_parsing.rb  parse_documents.rb  parsekit_demo.rb  parser_core_demo.rb
ext/parsekit/: Cargo.toml  extconf.rb
ext/parsekit/src/: error.rs  format_detector.rs  lib.rs  parser.rs
ext/parser_core/: Cargo.toml  extconf.rb
ext/parser_core/src/: error.rs  lib.rs  parser.rs
lib/: parsekit.rb  parser_core.rb
lib/parsekit/: error.rb  parser.rb  version.rb
lib/parser_core/: error.rb  parser.rb  version.rb
spec/: parsekit_spec.rb  parser_core_spec.rb  spec_helper.rb
spec/fixtures/: corrupted.docx  grayscale.tiff  latin1.txt  palette_lzw.tiff  palette_zip.tiff  rgb_lzw.tiff  rgb_zip.tiff  rgba.tiff  sample.docx  sample.html  sample.md  sample.pptx  sample.xls  sample.xlsx  sample_grayscale_none.tif  sample_rgb_lzw.tif  sample_rgb_zip.tif  sample_rgba_none.tif  sample_unsupported_palette_lzw.tif  sample_unsupported_palette_none.tif  sample_zip.tif  shift_jis.txt  utf16.txt  ~$sample.docx
spec/parsekit/: dispatch_spec.rb  encoding_spec.rb  error_consistency_spec.rb  error_handling_spec.rb  format_detection_spec.rb  integration_spec.rb  ocr_spec.rb  parser_spec.rb  pdf_parser_spec.rb  simple_parsing_spec.rb  validation_helpers_spec.rb
spec/parser_core/: integration_spec.rb  ocr_spec.rb  parser_spec.rb  pdf_parser_spec.rb  simple_parsing_spec.rb
spec/support/: shared_examples.rb
test_documents/: sample.txt
