[package]
name = "parser_core"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]
name = "parser_core"

[dependencies]
magnus = { version = "0.7", features = ["rb-sys"] }
parser-core = "0.1"

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1