[package]
name = "parser_core"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]
name = "parser_core"

[dependencies]
magnus = { version = "0.7", features = ["rb-sys"] }
# Document parsing without system dependencies
pdf-extract = { version = "0.7", default-features = false }
calamine = "0.26"  # Excel parsing
docx-rs = "0.4"  # Word document parsing
quick-xml = "0.36"  # XML parsing
serde_json = "1.0"  # JSON parsing
regex = "1.10"  # Text parsing
encoding_rs = "0.8"  # Encoding detection

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1