[package]
name = "parser_core"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
license = "MIT"
publish = false

[lib]
crate-type = ["cdylib"]
name = "parser_core"

[dependencies]
magnus = { version = "0.7", features = ["rb-sys"] }
# Document parsing - testing embedded C libraries
# MuPDF builds from source and statically links
mupdf = { version = "0.5", default-features = false, features = [] }
# OCR - Tesseract with image loading support
rusty-tesseract = "1.1"  # Tesseract wrapper with image loading
image = "0.25"  # Image processing library (match rusty-tesseract's version)
calamine = "0.26"  # Excel parsing
docx-rs = "0.4"  # Word document parsing
quick-xml = "0.36"  # XML parsing
serde_json = "1.0"  # JSON parsing
regex = "1.10"  # Text parsing
encoding_rs = "0.8"  # Encoding detection

[features]
default = []

[profile.release]
opt-level = 3
lto = true
codegen-units = 1